feat(vault): add web layer